--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,6 @@
         <div class="school">
                 <div class="title">Middlesex County College</div>
                 <div class="degree">A.A.S in Computer Science, major in Network and Administration Support </div>
-        
         </div>        
         </br>
             <div class="school">
@@ -45,9 +44,9 @@
         <h2>Hobbies</h2>
         <h3>Photos</h3>
             <div id="images">
-                <img id="image" src="./assets/media/img/photo03.png" alt="flowers">
-                <img src="./assets/media/img/photo04.png" alt="squirrel">
-                <img src="./assets/media/img/photo13.jpg" alt="motorcyle">
+                <img id="image1" src="./assets/media/img/photo03.png" alt="flowers">
+                <img id="image2" src="./assets/media/img/photo04.png" alt="squirrel">
+                <img id="image3" src="./assets/media/img/photo13.jpg" alt="motorcyle">
             </div>
             <div id="buttons">
             <button type="button" onclick="slides()">Previous</button>
