--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
             <button id="button0">0</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
-            <button id="clear"></button>
+            <button id="clear">clear</button>
         </div>
     </div>
     <!--
