--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <link rel="stylesheet" href="./assets/css/projects.css"> 
     <script type="module" src="./assets/js/projects.js"></script>
-    <script type="module" src="./assets/js/searhc.js"></script>
+    <!-- <script type="module" src="./assets/js/searhc.js"></script> -->
 </head>
 <body>
 <div class="name">Alexandra Lalama</div>
@@ -110,7 +110,7 @@
             <button id="button8">8</button>
             <button id="button9">9</button>
             <button id="mulitply">*</button>
-            <button id="clear">clear</button>
+            <button onclick="clear()"id="clear">clear</button>
             <button id="button0">0</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
