--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
         As you probably know, my name is Alexandra Lalama. I currently live in New
         Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a class="link" href="#educationSection">Education</a> section.
         <br><br>
-        I have an interest in digitally producing music and learning new things.
+        <!--I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
-        expand my design skills within coding, using DAWS, and instruments. To
+        expand my design skills within coding, using DAWS, and instruments. --> To
         find more about my specific hobbies and what I have created you can
         visit my <a class="link" href="#hobbiesSection">Hobbies</a> section. I also have an interest in 
         computer hardware. 
