--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
             <button id="button8">8</button>
             <button id="button9">9</button>
             <button id="mulitply">*</button>
-            <button id="clear" onclick="clearFunction();" >clear</button>
+            <button id="clear" onclick="clearFunction()" >clear</button>
             <button id="button0">0</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
