--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
     <div id="placeholder">
         <p id = "calculator-number"></p>
         <div id="button-holders">
-            <button id="button1">1</button>
+            <button id="buttonone">1</button>
             <button id="button2">2</button>
             <button id="button3">3</button>
             <button id="plus">+</button>
