--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <link rel="stylesheet" href="./assets/css/projects.css"> 
-    <script type="module" src="./assets/js/projects.js"></script>
+    <script type="module" src="./assets/js/projects.js" defer></script>
     <!-- <script type="module" src="./assets/js/searhc.js"></script> -->
 </head>
 <body>
