--- a/about.html
+++ b/about.html
@@ -82,11 +82,13 @@
         </div>
     </p>
     </main>
-    <div class="footer">
+   <footer>
+        <div>
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
-    </div>
-    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
+        </div>
+        Copyright &copy; 2025 Alexandra Lalama. All rights reserved.
+    </footer>
 </body>
 </html>
 
