--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,14 @@
             </form>
         </fieldset>
     </main>
-    <div class="footer">
+<footer>
+        <div>
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
-    </div>
-    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
+        </div>
+        Copyright &copy; 2025 Alexandra Lalama. All rights reserved.
+</footer>
+    
+     
 </body>
 </html>
