--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
         -->
 <main>
     <div id="placeholder">
-        <p id = "calculator-number"></p>
+        <p id ="calculator-number"></p>
         <div id="button-holders">
             <button id="buttonone">1</button>
             <button id="button2">2</button>
@@ -110,7 +110,7 @@
             <button id="button8">8</button>
             <button id="button9">9</button>
             <button id="mulitply">*</button>
-            <button type="button" id="clear">clear</button>
+            <button type="button" id="clear" onclick="clearFunction()">clear</button>
             <button id="button0">0</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
