--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <link rel="stylesheet" href="./assets/css/projects.css"> 
-    <script type="defer" src="./assets/js/projects.js"></script>
+    <script src="./assets/js/projects.js"></script>
     <!-- <script type="module" src="./assets/js/searhc.js"></script> -->
 </head>
 <body>
@@ -110,7 +110,7 @@
             <button id="button8">8</button>
             <button id="button9">9</button>
             <button id="mulitply">*</button>
-            <button type="button" id="clear" onclick="clearFunction();">clear</button>
+            <button type="button" id="clear" onclick="clearFunction()">clear</button>
             <button id="button0">0</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
