change string to number

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="#" alt="home_photo" />
         <div id="home_text">
             Hi, welcome to my website. My name is Alexandra Lalama and this is my site.
-            On the <a href="about.html" class="link" onclick="myFunction()">About</a> page there is information about my education, hobbies, and projects.
+            On the <a href="about.html" class="link"">About</a> page there is information about my education, hobbies, and projects.
         </div>
     </main>
     <footer>
