--- a/projects.html
+++ b/projects.html
@@ -96,25 +96,24 @@
         -->
 <main>
     <div id="placeholder">
-        <p id="calculator-number">0</p>
+        <p id="calculator-number"></p>
         <div id="button-holders">
-            <button id="button1">1</button>
-            <button id="button2">2</button>
-            <button id="button3">3</button>
-            <button id="plus">+</button>
-            <button id="button4">4</button>
-            <button id="button5">5</button>
-            <button id="button6">6</button>
-            <button id="minus">-</button>
-            <button id="button7">7</button>
-            <button id="button8">8</button>
-            <button id="button9">9</button>
-            <button id="mulitply">*</button>
+            <button type="button" id="button1" >1</button>
+            <button type="button" id="button2">2</button>
+            <button type="button" id="button3">3</button>
+            <button type="button" id="plus" onclick="plus">+</button>
+            <button type="button" id="button4">4</button>
+            <button type="button" id="button5">5</button>
+            <button type="button" id="button6" >6</button>
+            <button type="button" id="minus">-</button>
+            <button type="button"id="button7" >7</button>
+            <button type="button" id="button8">8</button>
+            <button type="button" id="button9" >9</button>
+            <button type="button" id="mulitply">*</button>
             <button type="button" id="clear" onclick="clearFunction()">clear</button>
-            <button id="button0">0</button>
-            <button id="equals">=</button>
+            <button id="button0" >0</button>
+            <button id="equals" onclick="equals()">=</button>
             <button id="divide">/</button>
-            
         </div>
     </div>
     <!--
