--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="https://github.com/alexlalama"  target="_blank"><img src="./assets/media/img/github-mark-white.png" alt="Git"></a>
             <a href="https://calendly.com/a8293699" target="_blank"><img src="./assets/media/img/Calendly_idkbixDmT2_1.png" alt="Calendly"></a>
         </div>
-        <!-- submit email + message -->
+        <!-- submit email + message
         <fieldset>
             <form action="#">
                 <p id="sendmsg">Connect</p>
@@ -30,6 +30,7 @@
                 <input type="submit" id="submit" name="submit">
             </form>
         </fieldset>
+         -->
     </main>
 <footer>
         <div>
