--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
     </nav>
-    <main>
+    <main id="index">
         <img src="#" alt="home_photo" />
         <div id="home_text">
             Hi, welcome to my website. My name is Alexandra Lalama and this is my site.
-            On the <a href="about.html" class="link"">About</a> page there is information about my education, hobbies, and projects.
+            On the <a href="about.html" class="link" >About</a> page there is information about my education, hobbies, and projects.
         </div>
     </main>
     <footer>
