--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/css/index.css">
+        <link rel="icon" type="image/x-icon" href="assets/img/Group 1.png">
     </head>
 <body>
     <div class="name">Alexandra Lalama</div>
@@ -14,11 +15,12 @@
         <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
     </nav>
-    <main id="index">
+    <main>
         <img src="#" alt="home_photo" />
         <div id="home_text">
             Hi, welcome to my website. My name is Alexandra Lalama and this is my site.
-            On the <a href="about.html" class="link" >About</a> page there is information about my education, hobbies, and projects.
+            On the <a href="about.html" class="link" >About</a> page there is information 
+            about my education, hobbies, and projects.
         </div>
     </main>
     <footer>
