--- a/about.html
+++ b/about.html
@@ -15,27 +15,34 @@
         <div><a href="projects.html">Projects</a></div> 
         <div><a href="contact.html">Contact</a></div>
     </nav>
-    <main id="about">
+    <main>
         <div id ="about">
-            As you probably know, my name is Alexandra Lalama. I currently live in New
-            Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a class="link" href="#educationSection">Education</a> section.
+            My name is Alexandra Lalama and I live in New
+            Jersey. I am attending Middlesex County College, studying Computer Science with 
+            a concentration in Network and Administration Support. If you would like to read 
+            more about my courses and previous education please visit my 
+            <a class="link" href="#educationSection">Education</a> section.
             <br><br>
             <!--I have an interest in digitally producing music and learning new things.
             After college, I aim to work in the tech or music industry where I can
-            expand my design skills within coding, using DAWS, and instruments. --> To
-            find more about my specific hobbies and what I have created you can
-            visit my <a href="#hobbiesSection" class="link">Hobbies</a> section. I also have an interest in 
-            computer hardware. 
+            expand my design skills within coding, using DAWS, and instruments. --> 
+            To find more about my specific hobbies and what I have created you can
+            visit my <a href="#hobbiesSection" class="link">Hobbies</a> section. 
+            I also have an interest in computer hardware. 
         </div>
         <p id = "educationSection">
             <h2>Education</h2>
             <div class="school">
                 <div class="title">Middlesex County College</div>
-                <div class="degree">A.A.S in Computer Science, major in Network and Administration Support </div>
+                <div class="duration">Jan 2025 - Expected May 2027</div>
+                <div class="degree">A.A.S in Computer Science, major in Network and 
+                    Administration Support 
+                </div>
             </div>        
             </br>
             <div class="school">
             <div class="title">Rochester Institute of Technology</div>
+                <div class="duration">Obtained 80 Credits</div>
                 <div class="degree">B.S. in Computing and Information Technology </div> 
                 <div class="awards">Dean's List in Spring of 2022</div>
             </div>
