--- a/about.html
+++ b/about.html
@@ -33,16 +33,20 @@
         <p id = "educationSection">
             <h2>Education</h2>
             <div class="school">
-                <div class="title">Middlesex County College</div>
-                <div class="duration">Jan 2025 - Expected May 2027</div>
+                <div class ="school-header">
+                    <div class="title">Middlesex County College</div>
+                    <div class="duration">Jan 2025 - Expected May 2027</div>
+                </div>
                 <div class="degree">A.A.S in Computer Science, major in Network and 
                     Administration Support 
                 </div>
             </div>        
             </br>
             <div class="school">
-            <div class="title">Rochester Institute of Technology</div>
-                <div class="duration">Obtained 80 Credits</div>
+                <div class ="school-header">
+                    <div class="title">Rochester Institute of Technology</div>
+                    <div class="duration">Obtained 80 Credits</div>
+                </div>
                 <div class="degree">B.S. in Computing and Information Technology </div> 
                 <div class="awards">Dean's List in Spring of 2022</div>
             </div>
